--- a/强化学习笔记/08_DQN改进.ipynb
+++ b/强化学习笔记/08_DQN改进.ipynb
@@ -266,7 +266,7 @@
     "    max_q_value_list = []\n",
     "    max_q_value = 0\n",
     "    for epoch in range(s_epoch, total_epoch):\n",
-    "        with tqdm(total=total_episode, desc='<%d/%d>'%(epoch+1, total_epoch), leave=False) as pbar:\n",
+    "        with tqdm(total=total_episode, desc='<%d/%d>'%(epoch + 1, total_epoch), leave=False) as pbar:\n",
     "            for episode in range(total_episode):\n",
     "                episode_return = 0\n",
     "                state = env.reset()[0]\n",
@@ -482,6 +482,7 @@
     "                episode_rewards += reward\n",
     "            except:\n",
     "                env.close()\n",
+    "                raise Exception('Something wrong when execution!')\n",
     "            if done or truncated:\n",
     "                break\n",
     "        totals.append((episode_rewards))\n",
@@ -721,14 +722,14 @@
     "\n",
     "Dueling DQN的差异在网络上，网络共享一套参数（除了最后被分开的一层）。\n",
     "\n",
-    "网络有两个输出，一个是优势A，另一个是状态价值V，实际上 `A = Q - V`，即估计的Q值减去当前状态的价值V等于动作优势A，但是我们需要网络给出Q值，因此变成 `Q = V + A`. \n",
+    "网络有两个输出，一个是优势A，另一个是状态价值V，实际上最初想的是 `A = Q - V`，即估计的Q值减去当前状态的价值V等于动作优势A，但是我们需要网络给出Q值，因此变成 `Q = V + A`. \n",
     "> 注：A和Q有两个参数`s,a`，所以叫`状态动作`优势/价值；V只有一个参数`s`，所以叫`状态`价值。\n",
     "\n",
-    "一个是V值，代表当前状态的价值，如果是一个批量，那么有两个维度，大小是(批量数, 1)；另一个是A，表示当前动作的相对优势（人为定义的），它类似传统的Q值，即给出了该状态下每个动作的Q值，如果输入的是一个批量，那么大小是(批量, 动作空间)；\n",
+    "V值，代表当前状态的价值，如果是一个批量，那么有两个维度，大小是(批量数, 1)；另一个是A，表示当前动作的相对优势（人为定义的），它类似传统的Q值，即给出了该状态下每个动作的Q值，如果输入的是一个批量，那么大小是(批量, 动作空间)；其中A一般是多维的，类似之前输出Q值，因为每个状态都对应一个Q值，并且有一个状态批量，而V是一维的，代表每个状态的一个状态价值。所谓状态价值，可以理解为有的状态很差，无论采用什么动作都很难获得比较好的回报，那么这时候状态价值就很低，反之同理。\n",
     "\n",
-    "在网络中需要限制A的更新，$Q = V + (A - \\bar{A})$, 减去$\\bar{A}$，会使得A整体更接近0，并且均值为0，这是为了减少A在梯度下降中的调整大小，从而使得梯度下降主要影响V，V的输出比较简单，也好调整一些，而改变了V，也就同时改变了所有动作的A值(运算的广播机制)，等于改变了所有动作的Q值（同时增加或者减少），因此在某个状态下的学习会对所有动作的估计产生影响，而不是只改变Q值最大的那个动作的估计。这就类似于从状态中学习价值，有的状态比较好，用什么动作都能获利，有的状态比较差，很多动作都会受损，就减小该状态下所有动作的Q值。\n",
+    "在网络中需要限制A的更新，$Q = V + (A - \\bar{A})$，$A $减去$\\bar{A}$，会使得A整体更接近0，并且均值为0，这是为了减少A在梯度下降中的调整大小，从而使得梯度下降主要影响V，V的输出比较简单，也好调整一些，而改变了V，也就同时改变了所有动作的A值(矩阵运算的广播机制)，等于改变了所有动作的Q值（同时增加或者减少），因此在某个状态下的学习会对所有动作的估计产生影响，而不是只改变Q值最大的那个动作的估计。\n",
     "\n",
-    "在前面的普通DQN和Double DQN中，没有A和V的概念，网络直接输出Q，在反向传播中，只考虑了Q值最大的那个动作，在反向传播中，就只是考虑了该动作造成的误差。"
+    "在前面的普通DQN和Double DQN中，没有A和V的概念，网络直接输出Q，在反向传播中，只考虑了Q值最大的那个动作，就只是考虑了该动作造成的误差。"
    ]
   }
  ],
