--- a/强化学习笔记/09_梯度策略.ipynb
+++ b/强化学习笔记/09_梯度策略.ipynb
@@ -87,7 +87,7 @@
     "            reward = reward_list[i]\n",
     "            state = torch.tensor(state_list[i], dtype=torch.float).to(self.device) \n",
     "            action = torch.tensor(action_list[i]).view(-1, 1).to(self.device)  # 选择当前步骤的动作\n",
-    "            log_prob = torch.log(self.policy_net(state.unsqueeze(0)).gather(1, action))  # 对数概率\n",
+    "            log_prob = torch.log(self.policy_net(state.unsqueeze(0)).gather(1, action))  # 依据动作选概率, 对数化\n",
     "            G = self.gamma * G + reward\n",
     "            loss = -log_prob * G  # 每一步的损失函数\n",
     "            loss.backward()  # 反向传播计算梯度, 在循环中一直积累梯度\n",
@@ -196,7 +196,7 @@
     "s_epoch, s_episode, reward_list = read_ckp(CKP_PATH)\n",
     "\n",
     "for epoch in range(s_epoch, total_epoch):\n",
-    "    with tqdm(total=total_episode, desc='<%d/%d>' % (epoch, total_epoch), leave=False) as pbar:\n",
+    "    with tqdm(total=total_episode, desc='<%d/%d>' % (epoch + 1, total_epoch), leave=False) as pbar:\n",
     "        for episode in range(s_episode, total_episode):\n",
     "            episode_reward = 0\n",
     "            transition_dict = {\n",
