修改增加笔记

--- a/强化学习笔记/07_DQN.ipynb
+++ b/强化学习笔记/07_DQN.ipynb
@@ -119,14 +119,14 @@
     "        actions = torch.tensor(transition_dict['actions']).view(-1, 1).to(self.device)\n",
     "        rewards = torch.tensor(transition_dict['rewards'], dtype=torch.float).view(-1, 1).to(self.device)\n",
     "        next_states = torch.tensor(transition_dict['next_states'], dtype=torch.float).to(self.device)\n",
-    "        dones = torch.tensor(transition_dict['dones'], dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        truncated = torch.tensor(transition_dict['truncated'], dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        dones = torch.tensor(transition_dict['dones'], dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        truncated = torch.tensor(transition_dict['truncated'], dtype=torch.int).view(-1, 1).to(self.device)\n",
     "\n",
     "        q_values = self.q_net(states).gather(1, actions)  # 模型预测本状态Q值\n",
     "        # 👆 tensor.gather(1, actions) 按行取, 索引为动作序号\n",
     "        max_next_q_values = self.target_q_net(next_states).max(1)[0].view(-1, 1) # 下个状态的最大Q值\n",
     "        # 👆 tensor.max(1)[0], (1)是指按行取最大,(0)按列; [0]是取值,[1]取序号,等于argmax\n",
-    "        q_targets = rewards + self.gamma * max_next_q_values * (1 - (dones.int() | truncated.int()))  # TD误差目标\n",
+    "        q_targets = rewards + self.gamma * max_next_q_values * (1 - (dones | truncated))  # TD误差目标\n",
     "        dqn_loss = torch.mean(F.mse_loss(q_values, q_targets))  # 均方误差损失函数\n",
     "        self.optimizer.zero_grad()  # 🟠 PyTorch中默认梯度会积累,比如多次求梯度会加总,这里需要显式将梯度置为0\n",
     "        dqn_loss.backward()  # 反向传播更新参数\n",
@@ -152,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x170cff8b0f0>"
+       "<torch._C.Generator at 0x1a0bcda3070>"
       ]
      },
      "execution_count": 5,
@@ -229,27 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                                  \r"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for epoch in range(s_epoch, total_epoch):\n",
     "    with tqdm.tqdm(total=total_episode, desc='<%d/%d>'%(epoch+1, total_epoch), leave=False) as pbar:\n",
@@ -439,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
