--- a/强化学习笔记/08_DQN改进.ipynb
+++ b/强化学习笔记/08_DQN改进.ipynb
@@ -140,8 +140,8 @@
     "        actions = torch.tensor(transition_dict['actions']).view(-1, 1).to(self.device)\n",
     "        rewards = torch.tensor(transition_dict['rewards'], dtype=torch.float).view(-1, 1).to(self.device)\n",
     "        next_states = torch.tensor(transition_dict['next_states'], dtype=torch.float).to(self.device)\n",
-    "        dones = torch.tensor(transition_dict['dones'], dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        truncated = torch.tensor(transition_dict['truncated'], dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        dones = torch.tensor(transition_dict['dones'], dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        truncated = torch.tensor(transition_dict['truncated'], dtype=torch.int).view(-1, 1).to(self.device)\n",
     "\n",
     "        q_values = self.q_net(states).gather(1, actions)  # Q值\n",
     "        \n",
@@ -152,7 +152,7 @@
     "        else:  # DQN的情况, 直接用目标网络估计价值\n",
     "            max_next_q_values = self.target_q_net(next_states).max(1)[0].view(-1, 1)\n",
     "            \n",
-    "        q_targets = rewards + self.gamma * max_next_q_values * (1 - (dones.int() | truncated.int()))  # TD误差目标\n",
+    "        q_targets = rewards + self.gamma * max_next_q_values * (1 - (dones | truncated))  # TD误差目标\n",
     "        dqn_loss = torch.mean(F.mse_loss(q_values, q_targets))  # 均方误差损失函数\n",
     "        self.optimizer.zero_grad()  # PyTorch中默认梯度会累积,这里需要显式将梯度置为0\n",
     "        dqn_loss.backward()  # 反向传播更新参数\n",
@@ -200,8 +200,9 @@
     "env = gym.make(env_name, render_mode='rgb_array')\n",
     "\n",
     "# DQN相关\n",
-    "total_epoch = 10  # 迭代数\n",
     "s_epoch = 0 # 默认开始位置\n",
+    "total_epoch = 10  # 迭代数\n",
+    "s_episode = 0\n",
     "total_episode = 100  # 每次迭代最大游戏轮数\n",
     "gamma = 0.98\n",
     "epsilon = 1  # 刚开始随机动作,更新中线性降低\n",
@@ -266,8 +267,8 @@
     "    max_q_value_list = []\n",
     "    max_q_value = 0\n",
     "    for epoch in range(s_epoch, total_epoch):\n",
-    "        with tqdm(total=total_episode, desc='<%d/%d>'%(epoch + 1, total_epoch), leave=False) as pbar:\n",
-    "            for episode in range(total_episode):\n",
+    "        with tqdm(total=(total_episode - s_episode), desc='<%d/%d>'%(epoch + 1, total_epoch), leave=False) as pbar:\n",
+    "            for episode in range(s_episode ,total_episode):\n",
     "                episode_return = 0\n",
     "                state = env.reset()[0]\n",
     "                done = truncated = False\n",
@@ -321,7 +322,8 @@
     "                }, CKP_PATH)\n",
     "                \n",
     "                pbar.update(1) # 更新进度条\n",
-    "                \n",
+    "            s_episode = 0\n",
+    "            \n",
     "    agent.q_net.load_state_dict(best_weight)  # 应用最佳权重\n",
     "    return reward_list, max_q_value_list"
    ]
@@ -343,12 +345,14 @@
     "    if os.path.exists(CKP_PATH):\n",
     "        checkpoint = torch.load(CKP_PATH)\n",
     "        s_epoch = checkpoint['epoch']\n",
+    "        s_episode = checkpoint['episode']\n",
     "        epsilon = checkpoint['epsilon']\n",
     "        agent.q_net.load_state_dict(checkpoint['best_weight'])\n",
     "        reward_list = checkpoint['reward_list']\n",
-    "        return s_epoch, epsilon, reward_list\n",
+    "        return s_epoch, s_episode, epsilon, reward_list\n",
     "    else:\n",
     "        s_epoch = 0\n",
+    "        \n",
     "        epsilon = 1  # 训练时要改的，随意初始化\n",
     "        reward_list = []\n",
     "        return s_epoch, epsilon, reward_list"
@@ -375,7 +379,7 @@
     }
    ],
    "source": [
-    "s_epoch, epsilon, reward_list = read_ckp('checkpoints/ckpt_dqn.pt')\n",
+    "s_epoch, s_episode, epsilon, reward_list = read_ckp('checkpoints/ckpt_dqn.pt')\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "agent = DQN(state_dim, hidden_dim, action_dim, lr, gamma, epsilon,\n",
     "            target_update, device)\n",
