--- a/强化学习笔记/09_策略梯度.ipynb
+++ b/强化学习笔记/09_策略梯度.ipynb
@@ -192,11 +192,11 @@
     }
    ],
    "source": [
-    "CKP_PATH = 'checkpoints/ckpt_REFORCE.pt'\n",
+    "CKP_PATH = 'checkpoints/ckpt_REINFORCE.pt'\n",
     "s_epoch, s_episode, reward_list = read_ckp(CKP_PATH)\n",
     "\n",
     "for epoch in range(s_epoch, total_epoch):\n",
-    "    with tqdm(total=total_episode, desc='<%d/%d>' % (epoch + 1, total_epoch), leave=False) as pbar:\n",
+    "    with tqdm(total=(total_episode - s_episode), desc='<%d/%d>' % (epoch + 1, total_epoch), leave=False) as pbar:\n",
     "        for episode in range(s_episode, total_episode):\n",
     "            episode_reward = 0\n",
     "            transition_dict = {\n",
@@ -243,7 +243,10 @@
     "            'reward_list': reward_list,\n",
     "            }, CKP_PATH)\n",
     "                \n",
-    "            pbar.update(1)"
+    "            pbar.update(1)\n",
+    "        s_episode = 0\n",
+    "        \n",
+    "agent.policy_net.load_state_dict(best_weight)  # 应用最佳权重"
    ]
   },
   {
