--- a/机器学习笔记/X_02_草稿.ipynb
+++ b/机器学习笔记/X_02_草稿.ipynb
@@ -6,38 +6,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gym\n",
-    "from gym import spaces"
+    "import gymnasium as gym\n",
+    "import torch\n",
+    "import torch.nn.functional as F"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make(\"CartPole-v1\", render_mode=\"rgb_array\")"
+    "env = gym.make('CartPole-v1', render_mode='rgb_array')\n",
+    "state1 = env.reset()[0]\n",
+    "state2 = env.reset()[0]\n",
+    "state3 = env.reset()[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([-0.02105744, -0.03670044, -0.03120446, -0.00998251], dtype=float32),\n",
-       " {})"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "env.reset()"
+    "state1 = torch.tensor(state1).to('cuda')\n",
+    "state2 = torch.tensor(state2).to('cuda')\n",
+    "state3 = torch.tensor(state3).to('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.stack([state1, state2, state3], dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Qnet(torch.nn.Module):\n",
+    "    def __init__(self, state_dim=4, hidden_dim_1=32, hidden_dim_2=32, action_dim=2):\n",
+    "        super().__init__()\n",
+    "        self.fc1 = torch.nn.Linear(state_dim, hidden_dim_1)\n",
+    "        self.fc2 = torch.nn.Linear(hidden_dim_1, hidden_dim_1)\n",
+    "        self.fc3 = torch.nn.Linear(hidden_dim_2, action_dim)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = F.elu(self.fc1(x))\n",
+    "        x = F.elu(self.fc2(x))\n",
+    "        return self.fc3(x)"
    ]
   },
   {
@@ -48,7 +70,11 @@
     {
      "data": {
       "text/plain": [
-       "gym.spaces.box.Box"
+       "Qnet(\n",
+       "  (fc1): Linear(in_features=4, out_features=32, bias=True)\n",
+       "  (fc2): Linear(in_features=32, out_features=32, bias=True)\n",
+       "  (fc3): Linear(in_features=32, out_features=2, bias=True)\n",
+       ")"
       ]
      },
      "execution_count": 6,
@@ -57,7 +83,61 @@
     }
    ],
    "source": [
-    "spaces.Box"
+    "qnet = Qnet()\n",
+    "qnet.to('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.0352, -0.0209, -0.0122,  0.0284],\n",
+       "        [ 0.0490, -0.0255, -0.0119,  0.0315],\n",
+       "        [ 0.0095,  0.0057, -0.0031,  0.0440]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0200, -0.2172],\n",
+       "        [ 0.0301, -0.2150],\n",
+       "        [ 0.0256, -0.2156]], device='cuda:0', grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qnet(state)"
    ]
   },
   {
@@ -84,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
