--- a/强化学习笔记/08_DQN改进.ipynb
+++ b/强化学习笔记/08_DQN改进.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "import matplotlib.pyplot as plt\n",
     "import rl_utils\n",
     "import os\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import seaborn as sns"
    ]
   },
   {
