Changes to be committed: 修改笔记

--- a/强化学习笔记/09_策略梯度.ipynb
+++ b/强化学习笔记/09_策略梯度.ipynb
@@ -45,7 +45,7 @@
     "    def forward(self, x):\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.relu(self.fc2(x))\n",
-    "        return F.softmax(x, dim=1)"
+    "        return F.softmax(x, dim=1)  # 输出各动作的概率"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "        self.optimizer.zero_grad() # 设定0梯度\n",
     "        for i in reversed(range(len(reward_list))):  # 从最后一步算起, 对每一个状态动作计算损失\n",
     "            reward = reward_list[i]\n",
-    "            state = torch.tensor(state_list[i], dtype=torch.float).to(self.device) \n",
+    "            state = torch.tensor(state_list[i], dtype=torch.float).to(self.device)\n",
     "            action = torch.tensor(action_list[i]).view(-1, 1).to(self.device)  # 选择当前步骤的动作\n",
     "            log_prob = torch.log(self.policy_net(state.unsqueeze(0)).gather(1, action))  # 依据动作选概率, 对数化\n",
     "            G = self.gamma * G + reward\n",
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "策略梯度的损失，不是与正确的动作来对比得到交叉熵，因为我们事先不知道正确的动作，所以没有参考，因此就只能人为确定一种损失，例如用网络给出的各个动作的概率，乘以当前得到的奖励（执行动作得到的当前奖励），如果奖励比较低，那么这个损失就比较小，我们需要梯度上升，所以要加个负号，那么奖励越小，损失就越大，奖励越大，损失就越小，符合我们调整参数的目标。"
+    "策略梯度的损失，不是与正确的动作来对比得到交叉熵，因为我们事先不知道正确的动作，所以没有参考，因此就只能人为确定一种损失，例如用网络给出的各个动作的概率，乘以当前得到的奖励（执行动作得到的当前奖励），如果奖励比较低，那么这个损失就比较小，我们需要梯度上升，所以要加个负号，那么奖励越小，损失就越大，反之同理，符合我们调整参数的目标。"
    ]
   },
   {
