add PPO and some changes

--- a/强化学习笔记/10_Actor-Critic.ipynb
+++ b/强化学习笔记/10_Actor-Critic.ipynb
@@ -102,8 +102,8 @@
     "    def take_action(self, state):\n",
     "        state = torch.tensor(state, dtype=torch.float).to(self.device)\n",
     "        probs = self.actor(state.unsqueeze(0))\n",
-    "        action_dist = torch.distributions.Categorical(probs)\n",
-    "        action = action_dist.sample()\n",
+    "        action_dist = torch.distributions.Categorical(probs)  # 根据给定概率创建一个分类的分布\n",
+    "        action = action_dist.sample()  # 从分布中采样一个类别，这里是动作\n",
     "        return action.item()  # 取到的动作序号是tensor, 转成普通python数字\n",
     "\n",
     "    def update(self, transition_dict):\n",
@@ -160,7 +160,8 @@
     "# A2C相关\n",
     "actor_lr = 1e-3\n",
     "critic_lr = 1e-2\n",
-    "num_episodes = 1000\n",
+    "total_epochs = 10\n",
+    "total_episodes = 100\n",
     "gamma = 0.98\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "print('device: ', device)\n",
@@ -238,9 +239,7 @@
     }
    ],
    "source": [
-    "rl_utils.train_on_policy_agent(env, agent, s_epoch=s_epoch,  total_epoch=10, \n",
-    "                               s_episode=s_episode, total_episode=100,\n",
-    "                               reward_list=reward_list, ckp_path=CKP_PATH)"
+    "rl_utils.train_on_policy_agent(env, agent, s_epoch,  total_epochs, s_episode, total_episodes, reward_list, CKP_PATH)"
    ]
   },
   {
@@ -280,7 +279,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -294,9 +293,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.6 (main, May 29 2023, 11:10:38) [GCC 11.3.0]"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
