修改并增加笔记

--- a/强化学习笔记/08_DQN改进.ipynb
+++ b/强化学习笔记/08_DQN改进.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +106,7 @@
     "                 dqn_type='VanillaDQN'):\n",
     "        \n",
     "        self.action_dim = action_dim\n",
+    "        \n",
     "        if dqn_type == 'DuelingDQN':  #======># Dueling DQN采取不一样的网络框架\n",
     "            self.q_net = VAnet(state_dim, hidden_dim,\n",
     "                               self.action_dim).to(device)\n",
@@ -116,6 +117,7 @@
     "                              self.action_dim).to(device)\n",
     "            self.target_q_net = Qnet(state_dim, hidden_dim,\n",
     "                                     self.action_dim).to(device)\n",
+    "            \n",
     "        self.optimizer = torch.optim.Adam(self.q_net.parameters(), lr=learning_rate)\n",
     "        self.gamma = gamma\n",
     "        self.epsilon = epsilon\n",
@@ -168,12 +170,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 离散转连续"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dis_to_con(discrete_action, env, action_dim):  # 离散动作转回连续的函数\n",
+    "    action_lowbound = env.action_space.low[0]  # 连续动作的最小值\n",
+    "    action_upbound = env.action_space.high[0]  # 连续动作的最大值\n",
+    "    return action_lowbound + (discrete_action / (action_dim - 1)) * (action_upbound - action_lowbound)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 初始化参数"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,10 +207,10 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1ff9c6961d0>"
+       "<torch._C.Generator at 0x24b3b1cde70>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +233,7 @@
     "minimal_size = 1000  # 最小经验数\n",
     "batch_size = 128\n",
     "best_score = 0  # 每回合中的最佳分数\n",
-    "reward_list = []\n",
+    "return_list = []\n",
     "best_weight = 0\n",
     "\n",
     "# 神经网络相关\n",
@@ -234,44 +255,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 离散转连续"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dis_to_con(discrete_action, env, action_dim):  # 离散动作转回连续的函数\n",
-    "    action_lowbound = env.action_space.low[0]  # 连续动作的最小值\n",
-    "    action_upbound = env.action_space.high[0]  # 连续动作的最大值\n",
-    "    return action_lowbound + (discrete_action / (action_dim - 1)) * (action_upbound - action_lowbound)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 训练函数"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_DQN(agent, env, total_epoch, total_episode, replay_buffer, minimal_size, batch_size):\n",
+    "def train_DQN(agent, env, s_epoch, total_epoch, s_episode, total_episode, replay_buffer, minimal_size, batch_size):\n",
     "    best_score = -100  # 初始化最佳分数\n",
-    "    reward_list = [] \n",
+    "    return_list = [] \n",
     "    max_q_value_list = []\n",
     "    max_q_value = 0\n",
     "    for epoch in range(s_epoch, total_epoch):\n",
     "        with tqdm(total=(total_episode - s_episode), desc='<%d/%d>'%(epoch + 1, total_epoch), leave=False) as pbar:\n",
     "            for episode in range(s_episode ,total_episode):\n",
     "                episode_return = 0\n",
-    "                state = env.reset()[0]\n",
+    "                state = env.reset(seed=42)[0]\n",
     "                done = truncated = False\n",
     "                while not (done | truncated):\n",
     "                    action = agent.take_action(state)\n",
@@ -298,14 +300,14 @@
     "                        best_weight = agent.q_net.state_dict()\n",
     "                        best_score = episode_return\n",
     "                        \n",
-    "                reward_list.append(episode_return)\n",
+    "                return_list.append(episode_return)\n",
     "                \n",
     "                if (episode + 1) % 10 == 0:\n",
     "                    pbar.set_postfix({\n",
     "                        'train_times':\n",
     "                        '%d' % (total_episode * epoch + episode + 1),\n",
-    "                        'recent_reward:':\n",
-    "                        '%.3f' % np.mean(reward_list[-10:]),\n",
+    "                        'recent_return:':\n",
+    "                        '%.3f' % np.mean(return_list[-10:]),\n",
     "                        'episilon':\n",
     "                        '%.2f' % agent.epsilon\n",
     "                    })\n",
@@ -319,26 +321,26 @@
     "                'episode': episode,\n",
     "                'best_weight': best_weight,\n",
     "                'epsilon': epsilon,\n",
-    "                'reward_list': reward_list,\n",
+    "                'return_list': return_list,\n",
     "                }, CKP_PATH)\n",
     "                \n",
     "                pbar.update(1) # 更新进度条\n",
     "            s_episode = 0\n",
     "            \n",
     "    agent.q_net.load_state_dict(best_weight)  # 应用最佳权重\n",
-    "    return reward_list, max_q_value_list"
+    "    return return_list, max_q_value_list"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 读取检查点"
+    "# 检查点"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,14 +351,14 @@
     "        s_episode = checkpoint['episode']\n",
     "        epsilon = checkpoint['epsilon']\n",
     "        agent.q_net.load_state_dict(checkpoint['best_weight'])\n",
-    "        reward_list = checkpoint['reward_list']\n",
-    "        return s_epoch, s_episode, epsilon, reward_list\n",
+    "        return_list = checkpoint['return_list']\n",
+    "        return s_epoch, s_episode, epsilon, return_list\n",
     "    else:\n",
     "        s_epoch = 0\n",
-    "        \n",
+    "        s_episode = 0\n",
     "        epsilon = 1  # 训练时要改的，随意初始化\n",
-    "        reward_list = []\n",
-    "        return s_epoch, epsilon, reward_list"
+    "        return_list = []\n",
+    "        return s_epoch, s_episode, epsilon, return_list"
    ]
   },
   {
@@ -380,11 +382,11 @@
     }
    ],
    "source": [
-    "s_epoch, s_episode, epsilon, reward_list = read_ckp('checkpoints/ckpt_dqn.pt')\n",
+    "s_epoch, s_episode, epsilon, return_list = read_ckp('checkpoints/ckpt_dqn.pt')\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "agent = DQN(state_dim, hidden_dim, action_dim, lr, gamma, epsilon,\n",
     "            target_update, device)\n",
-    "reward_list, max_q_value_list = train_DQN(agent=agent, env=env, total_epoch=total_epoch, total_episode=total_episode,\n",
+    "return_list, max_q_value_list = train_DQN(agent=agent, env=env, total_epoch=total_epoch, total_episode=total_episode,\n",
     "                                          replay_buffer=replay_buffer, minimal_size=minimal_size,\n",
     "                                          batch_size=batch_size)"
    ]
@@ -423,8 +425,8 @@
     }
    ],
    "source": [
-    "episodes_list = list(range(len(reward_list)))\n",
-    "mv_return = rl_utils.moving_average(reward_list, 5)\n",
+    "episodes_list = list(range(len(return_list)))\n",
+    "mv_return = rl_utils.moving_average(return_list, 5)\n",
     "\n",
     "plt.plot(episodes_list, mv_return)\n",
     "plt.xlabel('Episodes')\n",
@@ -553,10 +555,10 @@
    ],
    "source": [
     "CKP_PATH = 'checkpoints/ckpt_Double_dqn.pt'\n",
-    "s_epoch, epsilon, reward_list = read_ckp(CKP_PATH)\n",
+    "s_epoch, epsilon, return_list = read_ckp(CKP_PATH)\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "agent = DQN(state_dim, hidden_dim, action_dim, lr, gamma, epsilon, target_update, device, 'DoubleDQN')\n",
-    "reward_list, max_q_value_list = train_DQN(agent=agent, env=env, total_epoch=total_epoch, total_episode=total_episode,\n",
+    "return_list, max_q_value_list = train_DQN(agent=agent, env=env, total_epoch=total_epoch, total_episode=total_episode,\n",
     "                                          replay_buffer=replay_buffer, minimal_size=minimal_size,\n",
     "                                          batch_size=batch_size)"
    ]
@@ -595,8 +597,8 @@
     }
    ],
    "source": [
-    "episodes_list = list(range(len(reward_list)))\n",
-    "mv_return = rl_utils.moving_average(reward_list, 5)\n",
+    "episodes_list = list(range(len(return_list)))\n",
+    "mv_return = rl_utils.moving_average(return_list, 5)\n",
     "\n",
     "plt.plot(episodes_list, mv_return)\n",
     "plt.xlabel('Episodes')\n",
@@ -651,11 +653,11 @@
     }
    ],
    "source": [
-    "CKP_PATH = 'checkpoints/ckpt_Dueling_dqn.pt'\n",
-    "s_epoch, epsilon, reward_list = read_ckp(CKP_PATH)\n",
+    "CKP_PATH = 'checkpoints/ckpt_Dueling_dqn_on_PDv1.pt'\n",
+    "s_epoch, epsilon, return_list = read_ckp(CKP_PATH)\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "agent = DQN(state_dim, hidden_dim, action_dim, lr, gamma, epsilon, target_update, device, 'DuelingDQN')\n",
-    "reward_list, max_q_value_list = train_DQN(agent=agent, env=env, total_epoch=total_epoch, \n",
+    "return_list, max_q_value_list = train_DQN(agent=agent, env=env, total_epoch=total_epoch, \n",
     "                                          total_episode=total_episode, replay_buffer=replay_buffer, minimal_size=minimal_size, batch_size=batch_size)"
    ]
   },
@@ -693,8 +695,8 @@
     }
    ],
    "source": [
-    "episodes_list = list(range(len(reward_list)))\n",
-    "mv_return = rl_utils.moving_average(reward_list, 9)\n",
+    "episodes_list = list(range(len(return_list)))\n",
+    "mv_return = rl_utils.moving_average(return_list, 9)\n",
     "\n",
     "plt.plot(episodes_list, mv_return)\n",
     "plt.xlabel('Episodes')\n",
