--- a/强化学习笔记/09_策略梯度.ipynb
+++ b/强化学习笔记/09_策略梯度.ipynb
@@ -77,14 +77,14 @@
     "        return action.item()\n",
     "\n",
     "    def update(self, transition_dict):\n",
-    "        reward_list = transition_dict['rewards']\n",
+    "        return_list = transition_dict['rewards']\n",
     "        state_list = transition_dict['states']\n",
     "        action_list = transition_dict['actions']\n",
     "\n",
     "        G = 0\n",
     "        self.optimizer.zero_grad() # 设定0梯度\n",
-    "        for i in reversed(range(len(reward_list))):  # 从最后一步算起, 对每一个状态动作计算损失\n",
-    "            reward = reward_list[i]\n",
+    "        for i in reversed(range(len(return_list))):  # 从最后一步算起, 对每一个状态动作计算损失\n",
+    "            reward = return_list[i]\n",
     "            state = torch.tensor(state_list[i], dtype=torch.float).to(self.device)\n",
     "            action = torch.tensor(action_list[i]).view(-1, 1).to(self.device)  # 选择当前步骤的动作\n",
     "            log_prob = torch.log(self.policy_net(state.unsqueeze(0)).gather(1, action))  # 依据动作选概率, 对数化\n",
@@ -128,7 +128,7 @@
     "total_episode = 1000\n",
     "torch.manual_seed(0)\n",
     "best_score = 0\n",
-    "reward_list = []\n",
+    "return_list = []\n",
     "gamma = 0.98  # 折扣率\n",
     "learning_rate = 1e-3  # 学习率\n",
     "env_name = \"CartPole-v1\"\n",
@@ -162,13 +162,13 @@
     "        s_epoch = checkpoint['epoch']\n",
     "        s_episode = checkpoint['episode']\n",
     "        agent.policy_net.load_state_dict(checkpoint['best_weight'])\n",
-    "        reward_list = checkpoint['reward_list']\n",
-    "        return s_epoch, s_episode, reward_list\n",
+    "        return_list = checkpoint['return_list']\n",
+    "        return s_epoch, s_episode, return_list\n",
     "    else:\n",
     "        s_epoch = 0\n",
     "        s_episode = 0\n",
-    "        reward_list = []\n",
-    "        return s_epoch, s_episode, reward_list"
+    "        return_list = []\n",
+    "        return s_epoch, s_episode, return_list"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "outputs": [],
    "source": [
     "CKP_PATH = 'checkpoints/ckpt_REINFORCE.pt'\n",
-    "s_epoch, s_episode, reward_list = read_ckp(CKP_PATH)"
+    "s_epoch, s_episode, return_list = read_ckp(CKP_PATH)"
    ]
   },
   {
@@ -220,7 +220,7 @@
     "                \n",
     "                state = next_state\n",
     "                episode_reward += reward\n",
-    "            reward_list.append(episode_reward)\n",
+    "            return_list.append(episode_reward)\n",
     "            agent.update(transition_dict)\n",
     "            \n",
     "            if episode_reward > best_score:\n",
@@ -232,14 +232,14 @@
     "                    'episode':\n",
     "                    '%d' % (total_episode * epoch + episode + 1),\n",
     "                    'recent_return':\n",
-    "                    '%.3f' % np.mean(reward_list[-10:])\n",
+    "                    '%.3f' % np.mean(return_list[-10:])\n",
     "                })\n",
     "                                               \n",
     "            torch.save({\n",
     "            'epoch': epoch,\n",
     "            'episode': episode,\n",
     "            'best_weight': best_weight,\n",
-    "            'reward_list': reward_list,\n",
+    "            'return_list': return_list,\n",
     "            }, CKP_PATH)\n",
     "                \n",
     "            pbar.update(1)\n",
@@ -265,7 +265,7 @@
     }
    ],
    "source": [
-    "rl_utils.picture_reward(reward_list, 'REINFORCE', env_name, 9)"
+    "rl_utils.picture_return(return_list, 'REINFORCE', env_name, 9)"
    ]
   },
   {
@@ -292,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, May 29 2023, 11:10:38) [GCC 11.3.0]"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
