修改检查点名称，增加笔记

--- a/强化学习笔记/07_DQN.ipynb
+++ b/强化学习笔记/07_DQN.ipynb
@@ -180,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 初始化超参数"
+    "# 初始化参数"
    ]
   },
   {
@@ -239,7 +239,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 读取检查点"
+    "# 检查点函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_ckp(CKP_PATH):\n",
+    "    if os.path.exists(CKP_PATH):\n",
+    "        checkpoint = torch.load(CKP_PATH)\n",
+    "        s_epoch = checkpoint['epoch']\n",
+    "        s_episode = checkpoint['episode']\n",
+    "        epsilon = checkpoint['epsilon']\n",
+    "        agent.q_net.load_state_dict(checkpoint['best_weight'])\n",
+    "        return_list = checkpoint['return_list']\n",
+    "        return s_epoch, s_episode, epsilon, return_list\n",
+    "    else:\n",
+    "        s_epoch = 0\n",
+    "        s_episode = 0\n",
+    "        epsilon = 1  # 训练时要改的，随意初始化\n",
+    "        return_list = []\n",
+    "        return s_epoch, s_episode, epsilon, return_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 读取检查点"
    ]
   },
   {
@@ -248,14 +278,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if os.path.exists('checkpoints/ckpt_dqn_on_CPv1.pt'):\n",
-    "    checkpoint = torch.load('checkpoints/ckpt_dqn_on_CPv1.pt')\n",
-    "    s_epoch = checkpoint['epoch']\n",
-    "    epsilon = checkpoint['epsilon']\n",
-    "    agent.q_net.load_state_dict(checkpoint['best_weight'])\n",
-    "    return_list = checkpoint['return_list']\n",
-    "else:\n",
-    "    s_epoch = 0"
+    "PATH = 'checkpoints/ckpt_dqn_CPv1.pt'\n",
+    "s_epoch, s_episode, epsilon, return_list = read_ckp(PATH)\n",
+    "replay_buffer = rl_utils.ReplayBuffer(buffer_size)"
    ]
   },
   {
@@ -343,7 +368,7 @@
     "                'best_weight': best_weight,\n",
     "                'epsilon': epsilon,\n",
     "                'return_list': return_list,\n",
-    "                }, 'checkpoints/ckpt_dqn_on_CPv1.pt')\n",
+    "                }, PATH)\n",
     "            \n",
     "            pbar.update(1)  # 更新进度条\n",
     "agent.q_net.load_state_dict(best_weight)  # 应用最佳权重"
@@ -404,6 +429,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 初始化参数"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -421,6 +453,7 @@
    ],
    "source": [
     "# 环境相关\n",
+    "PATH = 'checkpoints/ckpt_dueling_dqn_CPv1.pt'\n",
     "env_name = 'CartPole-v1'\n",
     "env = gym.make(env_name, render_mode='rgb_array')\n",
     "\n",
@@ -454,6 +487,31 @@
     "random.seed(0)\n",
     "np.random.seed(0)\n",
     "torch.manual_seed(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 读取检查点"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH = 'checkpoints/ckpt_dqn_PDv1.pt'  # 迁移部署后按情况修改, 若已修改, 去掉后面三个叹号!!!\n",
+    "s_epoch, s_episode, epsilon, return_list = read_ckp(PATH)\n",
+    "replay_buffer = rl_utils.ReplayBuffer(buffer_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 训练"
    ]
   },
   {
@@ -534,7 +592,7 @@
     "                'best_weight': best_weight,\n",
     "                'epsilon': epsilon,\n",
     "                'return_list': return_list,\n",
-    "                }, 'checkpoints/ckpt_dueling_dqn_on_CPv1.pt')\n",
+    "                }, PATH)\n",
     "            \n",
     "            pbar.update(1)  # 更新进度条\n",
     "agent.q_net.load_state_dict(best_weight)  # 应用最佳权重"
