--- a/强化学习笔记/08_DQN改进.ipynb
+++ b/强化学习笔记/08_DQN改进.ipynb
@@ -382,10 +382,18 @@
     }
    ],
    "source": [
-    "s_epoch, s_episode, epsilon, return_list = read_ckp('checkpoints/ckpt_dqn.pt')\n",
+    "s_epoch, s_episode, epsilon, return_list = read_ckp('checkpoints/ckpt_dqn_PDv1.pt')\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "agent = DQN(state_dim, hidden_dim, action_dim, lr, gamma, epsilon,\n",
-    "            target_update, device)\n",
+    "            target_update, device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "return_list, max_q_value_list = train_DQN(agent=agent, env=env, total_epoch=total_epoch, total_episode=total_episode,\n",
     "                                          replay_buffer=replay_buffer, minimal_size=minimal_size,\n",
     "                                          batch_size=batch_size)"
@@ -554,7 +562,7 @@
     }
    ],
    "source": [
-    "CKP_PATH = 'checkpoints/ckpt_Double_dqn.pt'\n",
+    "CKP_PATH = 'checkpoints/ckpt_Double_dqn_PDv1.pt'\n",
     "s_epoch, epsilon, return_list = read_ckp(CKP_PATH)\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "agent = DQN(state_dim, hidden_dim, action_dim, lr, gamma, epsilon, target_update, device, 'DoubleDQN')\n",
@@ -653,7 +661,7 @@
     }
    ],
    "source": [
-    "CKP_PATH = 'checkpoints/ckpt_Dueling_dqn_on_PDv1.pt'\n",
+    "CKP_PATH = 'checkpoints/ckpt_Dueling_dqn_PDv1.pt'\n",
     "s_epoch, epsilon, return_list = read_ckp(CKP_PATH)\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "agent = DQN(state_dim, hidden_dim, action_dim, lr, gamma, epsilon, target_update, device, 'DuelingDQN')\n",
